fixed navbar spacing

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -8,6 +8,7 @@ a {
   font-size: 20px;
   text-decoration: none;
   padding: 5px;
+  margin-left:10px;
 }
 a:hover {
   color: white;
